# LAIAS

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.agent-runner  GAP-ANALYSIS.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  INDIANA_SMB_BUSINESS_DEVELOPMENT_SOLUTION.md  INDIANA_SMB_BUSINESS_DEV_ENTERPRISE_SOLUTION.md  README.md  SSOT.md  TOM_VISION_AGENT_REPORT.md  claude.MD  docker-compose.yml  requirements-dev.txt  run_business_dev_agent.py
services/agent-generator/: .env.example  BUILD_SUMMARY.md  Dockerfile  HAPPY_PATH.md  README.md  alembic.ini  pyproject.toml  requirements-base.txt  requirements-crewai.txt  requirements.txt  test_llm_e2e.py  test_zai_direct.py
services/agent-generator/alembic/: README.md  env.py
services/agent-generator/alembic/versions/: 001_initial.py
services/agent-generator/app/: __init__.py  config.py  main.py
services/agent-generator/app/api/: __init__.py  auth.py  dependencies.py
services/agent-generator/app/database/: __init__.py  session.py
services/agent-generator/app/middleware/: rate_limit.py  request_logging.py
services/agent-generator/app/models/: __init__.py  database.py  requests.py  responses.py  team.py
services/agent-generator/app/prompts/: __init__.py  few_shot_examples.py  godzilla_template.py  system_prompts.py
services/agent-generator/app/services/: __init__.py  code_generator.py  llm_provider.py  llm_service.py  orchestrator_client.py  template_service.py  validator.py
services/agent-generator/app/tools/: __init__.py  ai_tools.py  automation_tools.py  cloud_tools.py  composio_tools.py  database_tools.py  file_tools.py  integration_tools.py  mcp_adapter.py  registry.py  search_tools.py  web_tools.py
services/agent-generator/app/utils/: __init__.py  code_parser.py  exceptions.py  helpers.py
services/agent-generator/tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_business_dev.py  test_generate.py  test_teams.py  test_template_sync.py  test_templates.py  test_tools.py  test_users.py  test_validate.py
services/docker-orchestrator/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
services/docker-orchestrator/alembic/: env.py
services/docker-orchestrator/app/: __init__.py  config.py  llm_pricing.yaml  main.py
services/docker-orchestrator/app/api/: __init__.py  auth.py  dependencies.py
services/docker-orchestrator/tests/: __init__.py  conftest.py  test_analytics.py  test_containers.py  test_convert.py  test_filesystem.py  test_health.py  test_outputs.py
(+729 files in other folders)
