[project]
name = "laias-agent-generator"
version = "0.1.0"
description = "LAIAS Agent Generator Service - Generates CrewAI agents"
requires-python = ">=3.13,<3.14"
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
