[project]
name = "laias-agent-generator"
version = "0.1.0"
description = "LAIAS Agent Generator Service - Generates CrewAI agents"
requires-python = ">=3.11"
readme = "README.md"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# SQLAlchemy support
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Per-module overrides for gradual adoption
[[tool.mypy.overrides]]
module = [
    "crewai.*",
    "crewai_tools.*",
    "langchain.*",
    "chromadb.*",
    "docker.*",
    "pytest.*",
    "httpx.*",
]
ignore_missing_imports = true
